--- a/index.html
+++ b/index.html
@@ -608,9 +608,9 @@
         #scroll-to-top-btn:hover { background-color: #4f8050; transform: scale(1.08); }
 
         .animate-on-scroll {
-            opacity: 0; transform: translateY(25px);
-            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-        }
+    /* opacity: 0; transform: translateY(25px); */ /* تم تعطيل هذه الأسطر */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
         .animate-on-scroll.is-visible { opacity: 1; transform: translateY(0); }
 
         @media (max-width: 768px) {
