--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
     <footer class="site-footer">
         <div class="footer-content container">
             <div class="footer-logo-area animate-on-scroll">
-               <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhiO7utoiu5OKOGd6Sppo0FPzs26Wje5dOb3bXSYIQAx1jqmZlG28WHFoyQebTuUwn45f98KLne_FvPJX0e2LCfEz9xmGoHwLvZRuCk2ZT_x4RIM3ZYUkHz5P1m9THpTY592vzUE4UBYcc7KT9ggJ6HTTlIJ7KWcUOgaYiTIYFWYl_UlITMzpQRw8uTXD9e/s300/WhatsApp_Image_2025-08-03_at_1.35.08_PM-removebg-preview.png" alt="شعار مطعم NUTRI BOX - نيوتري بوكس" class="footer-logo-img">
+			                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhiO7utoiu5OKOGd6Sppo0FPzs26Wje5dOb3bXSYIQAx1jqmZlG28WHFoyQebTuUwn45f98KLne_FvPJX0e2LCfEz9xmGoHwLvZRuCk2ZT_x4RIM3ZYUkHz5P1m9THpTY592vzUE4UBYcc7KT9ggJ6HTTlIJ7KWcUOgaYiTIYFWYl_UlITMzpQRw8uTXD9e/s300/WhatsApp_Image_2025-08-03_at_1.35.08_PM-removebg-preview.png" alt="شعار مطعم NUTRI BOX - نيوتري بوكس" class="footer-logo-img">
                <p class="footer-tagline">الرياض، العارض، تقاطع شارع ريحانة مع طريق الملك عبد العزيز</p>
 			   <div class="footer-social-links animate-on-scroll">
                 <h3 class="footer-section-title"></h3>
@@ -765,6 +765,10 @@
           
         </div>
         <div class="footer-bottom">
+		<p class="footer-tagline">تنويه: جميع القيم الغذائية المدرجة (السعرات الحرارية، الكربوهيدرات، البروتين) تم حسابها لكل 100 غرام من المنتج</p>
+		
+		<p>للاطلاع على مسببات الحساسية <a href="https://www.sfda.gov.sa/sites/default/files/2019-11/%D9%85%D8%B3%D8%A8%D8%A8%D8%A7%D8%AA%20%D8%A7%D9%84%D8%AD%D8%B3%D8%A7%D8%B3%D9%8A%D8%A9.jpg" target="_blank">اضغط هنا</a>.
+
             <p>© <span id="current-year"></span> جميع الحقوق محفوظة لـ <a href="https://hajibsoft.github.io/QR-menu/" target="_blank">حاجب سوفت</a>.</p>
         </div>
     </footer>
@@ -818,7 +822,7 @@
         "category": "اطباق الإفطار",
         "description": "السعرات الحرارية: 285 سعرة\nالكربوهيدرات: 35.5 جم\nالبروتين: 4.5 جم\nالدهون: 12.1 جم",
         "basePrice": 12.0,
-        "image": ""
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgjOpSSF8-KdYQeW7zZWWkYx2siMwJFTicWA4TSrRfWfornIhgHF-nY1rpertJ2HY2H2BK1afwVKmuo1FRjqpQ0bF8DIM-bB9qRAfBx9QE-hT46schKKT8971dr02y-PISnNopsueijhQRBYk0O7LyjPAluN6bRiofzuU3-98M4dLK0Unh-bkeFO0wicijQ/s376/pan%20cake.jpg"
     },
     {
         "id": "21dda1",
@@ -826,15 +830,7 @@
         "category": "اطباق الإفطار",
         "description": "السعرات الحرارية: 214 سعرة\nالكربوهيدرات: 7.7 جم\nالبروتين: 11.1 جم\nالدهون: 15.5 جم",
         "basePrice": 8.0,
-        "image": ""
-    },
-    {
-        "id": "f6c626",
-        "name": "ساندويتش تركي",
-        "category": "اطباق الإفطار",
-        "description": "السعرات الحرارية: 245 سعرة\nالكربوهيدرات: 15.7 جم\nالبروتين: 18.5 جم\nالدهون: 12 جم",
-        "basePrice": 8.0,
-        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimtiI_Mc158XUR7U8byX4B-qvgquuIp9pO1OLv9TShyphenhyphenbxt3oIja6wrmJTxbITT3CWRDfT7CG0sH_OgXW_kdFtxPwgJ2bi1onpzSRk1Eni6UtGzk6kqNr8UdyG1xVMw6oZ2Gt18zbYrA0IhjQtGGpXvhTBs8Clc1T_l1R8nbsj4hrNavqH5p9yhxV_YkiAY/s342/Omelette%20sandwich.jpg"
+        "image": "https://blogger.googleusercontent.com/img/a/AVvXsEgviO8M_JlW4H1AQsYT3kce3EHuZYx6rchGwLUWkwW1rBh40rDBOLoLlDJodfqJ-JXMr1OaUxOg2hn7X50s4JwA2TRwvFpG9Si3Z4FYYp-idHhpRnQRqVOjJb6EKj_fBb6BKcZtYc8dno5lG7AzQ0maPJB5u4F9cy95XDTZwoiF_Huj3_cIzA6-eAEIB8u9"
     },
     {
         "id": "3f419c",
@@ -2308,6 +2304,95 @@
         "description": "السعرات الحرارية: 120 سعرة\nالكربوهيدرات: 6 جم\nالبروتين: 3.5 جم\nالدهون: 9 جم",
         "basePrice": 8.0,
         "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi2QUhkMgoirmLhBd1ERhHWCJLEWBZKxCnlY7im80hPoI5E04zwkmFHezCsEbSChBOtwLwusV206sWPJaeCnhPfgxgLV_8Eo05__EEjDgRYbgxEd0czTdKTEAjRRGlY6TxeKyGSY8wb2QQic2UB6VUdZw2Z9cYeCQTWg_5wUl0GKhSsmjD5tE1J_fdjHn4C/s305/Feta%20salad.jpg"
+    },
+    {
+        "id": "217955a4",
+        "name": "هيلثي كولا اناناس",
+        "category": "المشروبات",
+        "description": "",
+        "basePrice": 3.45,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjssv_P6Vj190gtkYg39IqpdGAw11-x4LAPN15B9eLZAAJYYqMt15AScOpph7JsAoPAO1kiyEx-Yo2Dq8s3BY73jv5xr6fqRj9hyphenhyphenSND62tbhu7aqeNIIbq_Ly2Qt6W0dRoZ3BCmK81qwC3vtHw9TueSCX9hp_9HdW5aUfPNseVM0ap4-dvEVMEcqC_TMass/s526/%D8%A7%D9%86%D8%A7%D9%86%D8%A7%D8%B3.png"
+    },
+    {
+        "id": "217955a3",
+        "name": "هيلثي كولا برتقال",
+        "category": "المشروبات",
+        "description": "",
+        "basePrice": 3.45,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgcH7yAJ0UFWzOZ6JF206lK9YdWVNL8lwlvPC99EdHYBM_fsSZvJAKpTYmUsT1O30i4TFuzcscxjkhXo4qe65T1ZqZafGoVeet0wu-WudunJ_Omwhrmq7tP7TAHB5QJbUNpSXPy9TIZCpOHCP_geKk8SNirbEvCIetBoh8On5ZHA4R3rJAKotaTwmJ0CcC2/s1000/%D8%A8%D8%B1%D8%AA%D9%82%D8%A7%D9%84.jpg"
+   },
+    {
+        "id": "217955a2",
+        "name": "هيلثي كولا تفاح",
+        "category": "المشروبات",
+        "description": "",
+        "basePrice": 3.45,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg2wjTcUokhyphenhyphenkJlPXivej1DyxZ8yQWKR1vW9tJ011it491C8ILR50fH65iEoBOefIyhpIN6Y3Ty5_ijxZIlWWiM3Gh-kckaUpuRVV7uIEI-grJvDdm1-Wi2Gkr2TFAYq-yEvwPi2YHGLvKD2d43pMiQQiX2aBv4vX63YJ7B65q8gEzPLTPmrpZfE_yyPojD/s500/%D8%AA%D9%81%D8%A7%D8%AD.jpg"
+   },
+    {
+        "id": "2179551a",
+        "name": "هيلثي كولا",
+        "category": "المشروبات",
+        "description": "",
+        "basePrice": 3.45,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiQrcvgQbxQs0962g88khOlKTGkW2BQ0YFuFfJarw1NZsGfM0L45dPzvTG9x8DNz0VuAgTn5e8iGOYtp55wviMlMe6HkcDQb4OpHv1R8hIubTcJ5Mgq_pE7p54DbaPlsNwzAKHqa57kVDACNColrsiPXxbHPi2r9D8itFcrpPlq0uzlO6dALfkzKrwP2jQ9/s437/%D9%83%D9%88%D9%84%D8%A7.jpg"
+    },{
+        "id": "2179551a",
+        "name": "هيلثي ليمون ونعناع",
+        "category": "المشروبات",
+        "description": "",
+        "basePrice": 3.45,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgabNFWYhIESG4tOwcfZv33ydpEpiUCjaZFRjVyc9pMilpd5i7Oh_yM2MN7KYWZLMMSIBAE1znLfV1E7SDfN9mtmJ353c4RFiH4RvdKgg38boThN2kYDDplXVBwaSgYWdJaZS_nL0KdlYgyCohDKDnjM69hZkhLeccIR2WtZA24A7xrdKDjbhK9kmdmQbHt/s1000/%D9%84%D9%8A%D9%85%D9%88%D9%86%20%D8%A8%D8%A7%D9%84%D9%86%D8%B9%D9%86%D8%A7%D8%B9.jpg"
+    },
+    {
+        "id": "22179551a",
+        "name": "حليب بروتين سادة",
+        "category": "المشروبات",
+       "description": "السعرات الحرارية: 69 سعرة\nالكربوهيدرات: 8.7 جم\nالبروتين: 8.5 جم\nالدهون: 0.5 جم",
+        "basePrice": 8.05,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiicGvp6m86CWO4-l1ffIt3iq_P3SKa696nJFEaCRFP66TNgbzPTP-UPowjWE6Wvw1XiC7sLiskapGsTklQvs0yzTILkDasT1kt8ZGoNaabsnm5msED0KmpiC__QC6hmupZMK-0qb8Pyjz2CrGgRBa5GEa-SNQDlDvek7FQ1M3JwTX6hQnkWii8IkJvPd8c/s1000/%D8%AD%D9%84%D9%8A%D8%A8%20%D8%A8%D8%B1%D9%88%D8%AA%D9%8A%D9%86%20%D8%B3%D8%A7%D8%AF%D8%A9.jpg"
+    }
+	,
+    {
+        "id": "23179551a",
+        "name": "حليب بروتين فراولة",
+        "category": "المشروبات",
+        "description": "السعرات الحرارية: 80 سعرة\nالكربوهيدرات: 8.7 جم\nالبروتين: 8 جم\nالدهون: 1.5 جم",
+        "basePrice": 8.05,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgP0uu8_CRGU9SkY3Ck5gWCuUgYZ8BYC7yakqEg3KQujnyMTleNga3z3ppFBrQeZyDlhoF9DU6MqOiWQHHRjC4v9s6pVXLD7LIfjS5W3XyNYOJmNJEUlHCzxylMtu7eMUnB9LNuge0LjDzgFpj1grZWlXxyevZi8xF-nvR3VVhovyz6xefV_Aq7SL1h2JwS/s225/%D8%AD%D9%84%D9%8A%D8%A8%20%D8%A8%D8%B1%D9%88%D8%AA%D9%8A%D9%86%20%D9%81%D8%B1%D8%A7%D9%88%D9%84%D8%A9.jpg"
+    }
+	,
+    {
+        "id": "24179551a",
+        "name": "حليب بروتين فانيلا مع فواكة مشكلة",
+        "category": "المشروبات",
+        "description": "السعرات الحرارية: 85 سعرة\nالكربوهيدرات: 9.7 جم\nالبروتين: 8 جم\nالدهون: 1.5 جم",
+        "basePrice": 8.05,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj_9gtHdmT26wt7FY407S5QaNiS7fc49IH9KbwgzW4g3kdKvR4daP1age1KB95Oa02arOmiGDoeHCL8ZdJTD6Ya4f1QOQEW4G2LvbhtvA3br3JzcO_dSbMUPcIdIpvf6L01ceJrI0vv7JJ_-UHrG3RWr5Hz5a0sZ5mnTcv8vuKF1_Fs0GiQ6R4qwEv65q3E/s1000/%D8%AD%D9%84%D9%8A%D8%A8%20%D8%A8%D8%B1%D9%88%D8%AA%D9%8A%D9%86%20%D9%81%D8%A7%D9%86%D9%8A%D9%84%D8%A7%20%D9%85%D8%B9%20%D9%81%D9%88%D8%A7%D9%83%D9%87%20%D9%85%D8%B4%D9%83%D9%84%D8%A9.jpg"
+    },
+    {
+        "id": "25179551a",
+        "name": "حليب بروتين بالتمر",
+        "category": "المشروبات",
+       "description": "السعرات الحرارية: 94 سعرة\nالكربوهيدرات: 15 جم\nالبروتين: 8.5 جم\nالدهون: 0.5 جم",
+        "basePrice": 8.05,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiU7r2AW6ombwsAkHFbfcit_opV81QMz8RZOomHU9TYSSmubHJzIg8VdswgGi6UXegxm98BM1764Wj1G5oBSm9nsbtSU_8wInEXb6jI92vp2l_qiq75Ppy7C-pavoym_Ak9OGXSnyOYRd-t60prQ0okNGQFIC2iZsVyMebEnQtofpdap1q_FtENH1CH_x3m/s225/%D8%AD%D9%84%D9%8A%D8%A8%20%D8%A8%D8%B1%D9%88%D8%AA%D9%8A%D9%86%20%D8%A8%D8%A7%D9%84%D8%AA%D9%85%D8%B1.jpg"
+    },
+    {
+        "id": "26179551a",
+        "name": "زبادي يوناني سادة",
+        "category": "المشروبات",
+        "description": "السعرات الحرارية:68 سعرة\nالكربوهيدرات: 4.5 جم\nالبروتين: 9.1 جم\nالدهون: 1.5 جم",
+        "basePrice": 9.20,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiLYYP98LHjYjQ0dGuHZlmrx6yNJNeE1f9fXDCWNGCqDuwH2qFvnY-fmsdx-tTw0ncvQMAPJrIm3mGlhi9uPBoIcqpRLzKbuPrt6RyuehGs_dDwCNRTWVh9rHIbAw5ltdq9Pjl4hswjDzdH2iiQzLLLZxS94lIHZL2UJNVjmL3KUV1LZl7ti9LjaimealyS/s1000/%D8%B2%D8%A8%D8%A7%D8%AF%D9%8A%20%D9%8A%D9%88%D9%86%D8%A7%D9%86%D9%8A%20%D8%B3%D8%A7%D8%AF%D8%A9.jpg"
+    },
+    {
+        "id": "27179551a",
+        "name": "زبادي يوناني بالتوت",
+        "category": "المشروبات",
+       "description": "السعرات الحرارية: 97 سعرة\nالكربوهيدرات: 12.7 جم\nالبروتين: 8.2جم\nالدهون: 1.5 جم",
+        "basePrice": 9.20,
+        "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhBvD6Wf1unbhwJqUG3dYr53xy56k1oGj9XWFgBuuV3XHSmFCq18W4G2s0C_ylnO_K_iFoJvrJJk8cocrDnRxJgJZ83CwIVi-H86fXnW0XFwdPZxBjM8kFHOoGnWdZv1_WHJKUzIsnb8CuQL2xgUL9uzDk5VamVSOdQ6fhBqObnPAvsTfvvAEXrwE1DUnRg/s1024/%D8%B2%D8%A8%D8%A7%D8%AF%D9%8A%20%D9%8A%D9%88%D9%86%D8%A7%D9%86%D9%8A%20%D8%A8%D8%A7%D9%84%D8%AA%D9%88%D8%AA.jpg"
     }
 ];
 
