--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
         <div class="footer-bottom">
 		<p class="footer-tagline">تنويه: جميع القيم الغذائية المدرجة (السعرات الحرارية، الكربوهيدرات، البروتين) تم حسابها لكل 100 غرام من المنتج</p>
 		
-		<p>للاطلاع على مسببات الحساسية <a href="https://www.sfda.gov.sa/sites/default/files/2019-11/%D9%85%D8%B3%D8%A8%D8%A8%D8%A7%D8%AA%20%D8%A7%D9%84%D8%AD%D8%B3%D8%A7%D8%B3%D9%8A%D8%A9.jpg" target="_blank">اضغط هنا</a>.
+		<p><a href="https://www.sfda.gov.sa/sites/default/files/2019-11/%D9%85%D8%B3%D8%A8%D8%A8%D8%A7%D8%AA%20%D8%A7%D9%84%D8%AD%D8%B3%D8%A7%D8%B3%D9%8A%D8%A9.jpg" target="_blank">اضغط هنا للاطلاع على مسببات الحساسية</a>.
 
             <p>© <span id="current-year"></span> جميع الحقوق محفوظة لـ <a href="https://hajibsoft.github.io/QR-menu/" target="_blank">حاجب سوفت</a>.</p>
         </div>
